k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: innotter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: innotter-frontend
  template:
    metadata:
      labels:
        app: innotter-frontend
    spec:
      containers:
        - name: frontend
          image: innotter-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
