k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: innotter-frontend
  ports:
    - protocol: TCP
      port: 80 # Порт внутри кластера
      targetPort: 80 # Порт контейнера
      nodePort: 30080 # Внешний порт, по которому мы будем заходить с твоего Mac
